# watchdog

./: CMakeLists.txt  Dockerfile  Dockerfile.windows  README.md
.github/workflows/: build.yml
include/: cli.hpp  platform.hpp  throttler.hpp
src/: cli.cpp  main.cpp  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  throttler.cpp
